...
    }()
    
    lazy var lblMyPlants: UILabel = {
        let lbl = UILabel(frame: .zero)
        lbl.textAlignment = .left
        lbl.font = UIFont.systemFont(ofSize: 28, weight: .semibold)
        lbl.text = "My Plants"
        lbl.numberOfLines = 0
        
        return lbl
    }()
    
    lazy var btnButer: UIButton = {
...
