...
        pwd.returnKeyType = UIReturnKeyType.done
        return pwd
    }()
    let enterButton: UIButton = {
        let btn = UIButton()
        btn.backgroundColor = UIColor(red: 49, green: 159, blue: 94)
        btn.setTitle("Войти", for: .normal)
        btn.setTitleColor(.white, for: .normal)
        btn.layer.opacity = 0.7
        return btn
    }()
    let mainStackView: UIStackView = {
        let stack = UIStackView()
...
